implemented method for listing all vets in idex page and removed vets/owners thymeleaf not save operator Closes #14

--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -16,9 +16,9 @@
         </thead>
         <tbody>
         <tr th:each="owner : ${owners}">
-            <td th:text="${owner?.id}">1</td>
-            <td th:text="${owner?.firstName}">Alan</td>
-            <td th:text="${owner?.lastName}">Barks</td>
+            <td th:text="${owner.id}">1</td>
+            <td th:text="${owner.firstName}">Alan</td>
+            <td th:text="${owner.lastName}">Barks</td>
         </tr>
         </tbody>
     </table>
