--- a/pet-clinic-web/src/main/resources/templates/pets/createOrUpdatePetForm.html
+++ b/pet-clinic-web/src/main/resources/templates/pets/createOrUpdatePetForm.html
@@ -2,7 +2,6 @@
   th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 
 <body>
-
   <h2>
     <th:block th:if="${pet['new']}">New </th:block>
     Pet
@@ -13,7 +12,7 @@
       <div class="form-group">
         <label class="col-sm-2 control-label">Owner</label>
         <div class="col-sm-10">
-          <span th:text="${pet.owner?.firstName + ' ' + pet.owner?.lastName}" />
+          <span th:text="${pet.owner?.firstName + ' ' + pet.owner?.lastName}"></span>
         </div>
       </div>
       <input
@@ -21,7 +20,7 @@
       <input
         th:replace="~{fragments/inputField :: input ('Birth Date', 'birthDate', 'date')}" />
       <input
-        th:replace="~{fragments/selectField :: select ('Type', 'type', ${types})}" />
+        th:replace="~{fragments/selectField :: select ('Type', 'petType', ${types})}" th:value="*{petType.id}" />
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
